# AIOS

./: .coverage  .gitignore  AIOS_Canonical_Repository_Plan.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api.py  aura  aura.cmd  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aura_os/: __init__.py  __main__.py  main.py
aura_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aura_os/ai/: __init__.py  aura.py  inference.py  knowledge.py  model_manager.py  session.py
aura_os/cloud/: __init__.py  client.py  nodes.py
aura_os/command_center/: __init__.py  center.py  dashboard.py  web.py
aura_os/config/: __init__.py  defaults.py  settings.py
aura_os/eal/: __init__.py  detector.py
aura_os/eal/adapters/: __init__.py  android.py  fallback.py  linux.py  macos.py  windows.py
aura_os/engine/: __init__.py  cli.py  router.py
aura_os/engine/commands/: __init__.py  ai.py  auto_cmd.py  center_cmd.py  clip_cmd.py  cron_cmd.py  disk_cmd.py  env_cmd.py  fs_cmd.py  health_cmd.py  help_cmd.py  init_cmd.py  kill_cmd.py  log_cmd.py  monitor_cmd.py  net_cmd.py  notify_cmd.py  pkg.py  plugin_cmd.py  ps_cmd.py  repo_cmd.py  run.py  secret_cmd.py  service_cmd.py  start_cmd.py  sys_cmd.py  user_cmd.py  web_cmd.py
aura_os/fs/: __init__.py  fhs.py  procfs.py  store.py  vfs.py
aura_os/init/: __init__.py  sequence.py
aura_os/kernel/: __init__.py  clipboard.py  cron.py  events.py  ipc.py  memory.py  network.py  plugins.py  process.py  scheduler.py  secrets.py  service.py  syslog.py
aura_os/maintenance/: __init__.py  diagnostics.py  repair.py
aura_os/net/: __init__.py  manager.py
aura_os/pkg/: __init__.py  manager.py  registry.py
aura_os/shell/: __init__.py  colors.py  completer.py  formatters.py  repl.py  shell.py
aura_os/users/: __init__.py  manager.py
aura_os/web/: __init__.py
boot/: startup.py
config/: capabilities.json
configs/: system.json
core/: __init__.py  engine.py  executor.py  filesystem.py  generator.py  logger.py  models.py  permissions.py  registry.py  router.py
docs/: architecture.md
eal/: __init__.py
eal/adapters/: __init__.py  android.py  fallback.py  linux.py  macos.py
logs/: events.jsonl
modules/: __init__.py
modules/ai/: __init__.py
modules/automation/: __init__.py
modules/browser/: __init__.py
modules/pkg/: __init__.py
modules/process/: __init__.py
modules/repo/: __init__.py
modules/shell/: __init__.py
scripts/: refresh_env.sh  start_web.sh
tests/: __init__.py  test_ai_inference.py  test_ai_model_manager.py  test_aura.py  test_build.py  test_command_center.py  test_config_settings.py  test_core_permissions.py  test_core_registry.py  test_eal.py  test_eal_adapters.py  test_engine.py  test_engine_commands.py  test_enhancements.py  test_fs.py  test_init_sequence.py  test_kernel_ipc.py  test_kernel_memory.py  test_kernel_scheduler.py  test_knowledge.py  test_modern_os.py  test_net_manager.py  test_new_features.py  test_new_modules.py  test_os_features.py  test_pkg_manager.py  test_pkg_registry.py  test_portable.py  test_real_os_modules.py  test_shell.py  test_standalone_os.py  test_users.py
