[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-os"
version = "0.2.0"
description = "AURA OS — lightweight, portable operating-system shell for Linux and macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AURA OS Contributors"},
]
keywords = ["os", "shell", "portable", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System",
    "Topic :: System :: Shells",
]

[project.scripts]
aura = "aura_os.main:main"

[project.urls]
Homepage = "https://github.com/Cbetts1/AIOS"
Repository = "https://github.com/Cbetts1/AIOS"

[tool.setuptools.packages.find]
include = ["aura_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
